<resources>
    <string name="app_name">TeSh</string>

    //Login page
    <string name="text_login">Login</string>
    <string name="textUserName">User Name</string>
    <string name="textPassword">Password</string>
    <string name="forgetPassword"><u>Forget password?</u></string>
    <string name="textOr">Or</string>
    <string name="facebook">Login with Facebook</string>
    <string name="google">Login with Google</string>
    <string name="not_acc">Doesn\'t have account?</string>
    <string name="text_Signup1"><u>Sign up</u></string>

    <string name="facebook_app_id">1343403089885143</string>
    <string name="fb_login_protocol_scheme">fb1343403089885143</string>
    <string name="facebook_client_token">3ad8d54e0cbd5ceb776d1af6b52455ab</string>


    //Sign up
    <string name="text_signup">Sign Up</string>
    <string name="textEmail">Email</string>
    <string name="text_Login1"><u>Login</u></string>
    <string name="textComfirmPassword">Comfirm Password</string>
    <string name="holderText">abc@gmail.com</string>
    //Home
    <string name="btn_cart">Cart</string>
    <string name="et_search">Enter here to search...</string>
    <string name="input_mess">message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_comic_detail">activity_comic_detail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

</resources>


