<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgr_splash"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/julius_sans_one"
            android:text="@string/text_login"
            android:textColor="@color/black"
            android:textSize="50dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/center_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_textUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/endcolor"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/user"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textUserName"
                android:maxLength="20"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_textUserName"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/endcolor"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/lock"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textPassword"
                android:maxLength="20"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPassword"
            android:layout_below="@+id/layout_textPassword"
            android:textColor="@color/black"
            android:layout_alignRight="@id/layout_textPassword"
            android:layout_marginTop="15dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_forgetPassword"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bgr"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/text_login" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/footer_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <View
                android:id="@+id/leftView"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="25dp"
                android:background="@color/black">
            </View>

            <TextView
                android:id="@+id/tv_Or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textOr"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="20sp">
            </TextView>

            <View
                android:id="@+id/rightView"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="25dp"
                android:background="@color/black">

            </View>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/social_media"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bgr_facebool"
                android:text="@string/facebook"
                android:fontFamily="@font/poppins_bold"
                android:drawableStart="@drawable/ic_facebook"
                android:paddingLeft="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bgr_google"
                android:text="@string/google"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:drawableStart="@drawable/ic_google"
                android:paddingLeft="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/tv_No_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_acc"
                android:textColor="@color/black"


                />
            <TextView
                android:id="@+id/tv_Signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_Signup1"
                android:textColor="@color/endcolor"
                android:textStyle="bold"
                android:layout_marginLeft="50dp"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>