<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgr_splash"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15">

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/julius_sans_one"
            android:text="@string/text_signup"
            android:textColor="@color/black"
            android:textSize="50dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/center_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_textUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/endcolor"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/black"
            app:endIconMode="clear_text"

            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/user"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textUserName"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_textUserName"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/endcolor"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/lock"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textPassword"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_textComfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_textPassword"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/endcolor"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/lock"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textComfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textComfirmPassword"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_textComfirmPassword"
            android:background="@drawable/btn_bgr"
            android:text="@string/text_signup"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="30dp"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/footer_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <View
                android:id="@+id/leftView"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="25dp"
                android:background="@color/black"></View>

            <TextView
                android:id="@+id/tv_Or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/textOr"
                android:textColor="@color/black"
                android:textSize="20sp"></TextView>

            <View
                android:id="@+id/rightView"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="25dp"
                android:background="@color/black">

            </View>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/social_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_bgr_facebool"
                android:drawableStart="@drawable/ic_facebook"
                android:fontFamily="@font/poppins_bold"
                android:paddingLeft="10dp"
                android:text="@string/facebook" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_bgr_google"
                android:drawableStart="@drawable/ic_google"
                android:fontFamily="@font/poppins_bold"
                android:paddingLeft="10dp"
                android:text="@string/google"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>